fix alignement of chips and button components

--- a/app/assets/stylesheets/components/chips.scss
+++ b/app/assets/stylesheets/components/chips.scss
@@ -1,4 +1,4 @@
-.chips-container div{
+.chips-container > div{
     margin-right: 10px;
 }
 
